# jaytrace

./: .gitignore  Angle.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  CompositeNode.cpp  CompositeNode.h  Config.h  Cube.cpp  Cube.h  CubeScene.cpp  CubeScene.h  FourSphereScene.cpp  FourSphereScene.h  IntersectionInfo.h  IntersectionLibrary.cpp  IntersectionLibrary.h  Jaytrace.pro  Light.cpp  Light.h  Material.cpp  Material.h  MaterialNode.cpp  MaterialNode.h  Node.cpp  Node.h  OBJModel.cpp  OBJModel.h  OBJScene.cpp  OBJScene.h  Plane.cpp  Plane.h  Poisson.cpp  Poisson.h  README  Ray.cpp  Ray.h  RayObject.cpp  (+28 more)
gui/: MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  RaytraceRenderer.cpp  RaytraceRenderer.h  RaytracerWidget.cpp  RaytracerWidget.h  Renderer.h  main.cpp
tests/: AngleTest.cpp  AngleTest.h  CameraTest.cpp  CameraTest.h  CubeTest.cpp  CubeTest.h  IntersectionLibraryTest.cpp  IntersectionLibraryTest.h  MaterialTest.cpp  MaterialTest.h  PlaneTest.cpp  PlaneTest.h  RayTest.cpp  RayTest.h  RotationNodeTest.cpp  RotationNodeTest.h  SceneGraphTest.cpp  SceneGraphTest.h  SphereTest.cpp  SphereTest.h  TransformNodeTest.cpp  TransformNodeTest.h  TriangleTest.cpp  TriangleTest.h  main.cpp
